# agentic-bi-dataops-copilot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  package.json  pyproject.toml
assets/: index-C6vUaF8f.css  index-zKzh9T60.js  index.es-Dfnti0Oe.js  jspdf.es.min-DjcDafFh.js
backend/: pyproject.toml
backend/src/lyrics_lab/: config.py
backend/src/lyrics_lab/api/: deps.py  main.py  query_utils.py  routes_analysis.py  routes_analytics.py  routes_artists.py  routes_data_quality.py  routes_datasets.py  routes_export.py  routes_health.py  routes_models.py  routes_safety.py  routes_songs.py  schemas.py
backend/src/lyrics_lab/db/: connection.py  schema.sql
backend/src/lyrics_lab/evaluation/: evaluate_classifier.py  evaluate_retrieval.py  evaluate_topics.py  run_evaluation.py  safety_checks.py
backend/src/lyrics_lab/features/: style_embeddings.py  tfidf_features.py
backend/src/lyrics_lab/ingestion/: data_quality.py  etl.py  generate_sample_data.py  import_data.py  load_bow.py  load_metadata.py  prepare_data.py  validate_safe_data.py
backend/src/lyrics_lab/models/: classification_pipeline.py  genre_classifier.py  sentiment_model.py  similarity.py  topic_model.py  train.py
backend/src/lyrics_lab/preprocessing/: clean_metadata.py  normalize_terms.py
backend/src/lyrics_lab/utils/: datasets.py  paths.py  serialization.py
backend/tests/: conftest.py  test_analysis_platform.py  test_analytics_endpoints.py  test_api_health.py  test_bow_loader.py  test_exploration_features.py  test_import_data.py  test_no_raw_lyrics.py  test_sentiment.py  test_showcase_features.py  test_similarity.py  test_topic_model.py
configs/: benchmark_queries.yaml  few_shot_examples.yaml  settings.yaml
data/: README.md
demo-app/: index.html  package.json
docker/: frontend.Dockerfile  frontend.nginx.conf
docs/: api_contract.md  architecture.md  data_card.md  demo_script.md  evaluation.md  frontend_guide.md  licensing_notes.md  model_card.md  security_and_guardrails.md
frontend/: index.html  (+10 more)
(+221 files in other folders)
