[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-bi-dataops-copilot"
version = "0.1.0"
description = "Agentic BI / DataOps Copilot — schema-aware Text2SQL + SQL guardrails over a DuckDB retail warehouse"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.0",
    "duckdb>=1.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "streamlit>=1.35",
    "httpx>=0.27",
    "plotly>=5.20",
    "sqlparse>=0.5",
    "sqlglot>=23.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "jupyterlab>=4.0",
    "ipython>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
