[project]
name = "lyrics-cultural-analytics-lab-backend"
version = "0.1.0"
description = "Copyright-safe lyrics NLP and cultural analytics backend"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.0.0",
  "fastapi>=0.111.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1",
  "scikit-learn>=1.5.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lyrics_lab"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
